2006-12-08  Sébastien Sablé  <sable.sungard@gmail.com>

	* setup.py, Sybase.py: Changing to release 0.38pre1

	* Sybase.py: Adding support for python native datetime type for
	dates - there is a new "datetime" argument to connect in order to
	choose the datetime type

	* setup.py: Corrected compilation in 64 bits mode based on a patch
	by Harri Pasanen

	* setup.py: Corrected linking with Sybase 15.0

2006-12-07  Sébastien Sablé  <sable.sungard@gmail.com>

	* Sybase.py: Factored out Cursor._checkready() - patch provided by
	Greg Ward

	* Sybase.py: Corrected tests test_description and test_rowcount -
	"This routine cannot be called because another command structure
	has results pending." when manually commiting after a select
	without fetching

	* Sybase.py: Corrected test test_ExceptionsAsConnectionAttributes
	- Added Exceptions as attributes of Connection based on patch by
	Greg Ward

	* Sybase.py: Corrected test test_non_existing_proc - Raising
	StoredProcedureError when calling a non-existing stored procedure

	* Sybase.py: Corrected test test_duplicate_error - Raising
	IntegrityError exception when trying to insert a duplicate value

	* Sybase.py: Corrected tests test_bug_result_pending3_fetchall,
	test_fetchall and test_fetchmany - "This routine cannot be called
	because another command structure has results pending." when
	manually commiting after a fetchall()

	* Sybase.py: Corrected tests test_bug_result_pending and
	test_bug_result_pending2 - "This routine cannot be called because
	another command structure has results pending." when calling
	execute on a cursor after a request has failed

	* cmd.c: Corrected core dump in ct_param when in debug mode

	* blk.c, cmd.c, conn.c, ctx.c, databuf.c, datafmt.c, datetime.c,
	iodesc.c, locale.c, money.c, msgs.c, numeric.c: Applied patch from
	Gregory Bond so that python-sybase works with python 2.5

	* setup.py, tests/sybase_dbapi20.py, tests/test_sybase_dbapi20.py: